[package]
name = "tlv_extractor"
version = "0.1.0"
license = "ISC"
author = "ralvescosta <rafael.rac.mg@gmail.com>"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
